--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,9 +9,8 @@ install:
   - go get -v github.com/onsi/ginkgo/ginkgo
   - go get -v github.com/onsi/gomega
   - go get -v -t ./...
-  - export PATH=$PATH:$HOME/gopath/bin
 test_script:
-  - ginkgo -r --randomizeAllSpecs --randomizeSuites --failOnPending --cover --trace --race --compilers=2
+  - c:\gopath\bin\ginkgo -r --randomizeAllSpecs --randomizeSuites --failOnPending --cover --trace --race --compilers=2
 notifications:
     # Webhook
     # http://requestb.in/umqk7hum?inspect
